--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kısıtlar Teorisi | Bahtiyar Ayhan</title>
     <style>
-        :root { --primary: #2c3e50; --accent: #e67e22; }
-        body { font-family: sans-serif; background: #f4f4f4; color: var(--primary); margin: 0; }
+        :root { --primary: #2c3e50; --accent: #e67e22; --bg: #f8f9fa; }
+        body { font-family: sans-serif; background: var(--bg); color: var(--primary); margin: 0; line-height: 1.6; }
         nav { background: var(--primary); color: white; padding: 1.5rem; text-align: center; }
-        .container { padding: 2rem; max-width: 900px; margin: auto; }
-        .card { background: white; padding: 1.5rem; margin: 1.2rem 0; border-left: 10px solid var(--accent); border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        h1 { text-align: center; color: var(--primary); }
+        .container { padding: 2rem; max-width: 850px; margin: auto; }
+        h1 { text-align: center; color: var(--primary); border-bottom: 3px solid var(--accent); padding-bottom: 10px; }
+        .card { background: white; padding: 1.5rem; margin: 1.5rem 0; border-left: 8px solid var(--accent); border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
         h3 { margin-top: 0; color: var(--accent); }
+        .footer-card { background: var(--primary); color: white; border-left: 8px solid #95a5a6; margin-top: 3rem; }
     </style>
 </head>
 <body>
-    <nav><strong>KISITLAR TEORİSİ ÜRETİM YÖNETİMİ</strong></nav>
+    <nav><strong>BAHTİYAR AYHAN | STRATEJİK ÜRETİM YÖNETİMİ</strong></nav>
     <div class="container">
         <h1>Üretimin 5 Altın Adımı</h1>
         <div class="card"><h3>1. Darboğazı Tespit Et</h3><p>Üretim hattındaki en yavaş makineyi (Rodaj veya CNC gibi) belirleyin.</p></div>
@@ -23,6 +24,12 @@
         <div class="card"><h3>3. Hızı Ayarla</h3><p>Diğer tüm makinelerin hızını, darboğaz makinesine göre senkronize edin.</p></div>
         <div class="card"><h3>4. Kısıtı Güçlendir</h3><p>Gerekirse o bölüme personel veya makine takviyesi yaparak kapasiteyi artırın.</p></div>
         <div class="card"><h3>5. Döngüyü Tekrarla</h3><p>Sistemi sürekli denetleyin; bir darboğaz çözüldüğünde yenisi oluşacaktır.</p></div>
+        
+        <div class="card footer-card">
+            <h3 style="color:white;">İletişim & Danışmanlık</h3>
+            <p>Üretim süreçlerinizi iyileştirmek için benimle iletişime geçebilirsiniz.</p>
+            <p><strong>E-posta:</strong> info@bahtiyarayhan.com</p>
+        </div>
     </div>
 </body>
 </html>
