--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         
         <div class="card footer-card">
             <h3 style="color:var(--white);">İletişim & Danışmanlık</h3>
-            <p><strong>E-posta:</strong> info@bahtiyarayhan.com</p>
+            <p><strong>E-posta:</strong>bbudumlu@hotmail.com</p>
         </div>
     </div>
 </body>
