--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="card footer-card">
             <h3 style="color:white;">İletişim & Danışmanlık</h3>
             <p>Üretim süreçlerinizi iyileştirmek için benimle iletişime geçebilirsiniz.</p>
-            <p><strong>E-posta:</strong> info@bahtiyarayhan.com</p>
+            <p><strong>E-posta:</strong>bbudumlu@hotmail.com</p>
         </div>
     </div>
 </body>
