--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-HTML
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -11,7 +10,9 @@ HTML
         .hero { background: linear-gradient(rgba(44, 62, 80, 0.85), rgba(44, 62, 80, 0.85)), url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&w=1200&q=80'); background-size: cover; background-position: center; color: var(--white); padding: 5rem 1rem; text-align: center; }
         .container { padding: 2rem; max-width: 900px; margin: auto; }
         .card { background: var(--white); padding: 1.8rem; margin: 1.5rem 0; border-left: 10px solid var(--accent); border-radius: 12px; box-shadow: 0 6px 25px rgba(0,0,0,0.07); }
-        .contact-btn { display: inline-block; background: var(--accent); color: white; padding: 12px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; margin-top: 20px; }
+        .btn-group { margin-top: 20px; }
+        .contact-btn { display: inline-block; background: var(--accent); color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; margin: 10px; transition: 0.3s; }
+        .phone-btn { background: #27ae60; } /* Telefon için yeşil buton */
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 4rem; }
     </style>
 </head>
@@ -25,10 +26,15 @@ HTML
         <div class="card"><h3>1. Darboğazı Tespit Et</h3><p>Hattın hızını belirleyen en kritik noktayı bulun.</p></div>
         <div class="card"><h3>2. Kısıtı Sömür</h3><p>Kritik makineler asla boşta beklememeli.</p></div>
         <div class="card"><h3>3. Hızı Ayarla</h3><p>Sistemi darboğazın temposuna göre senkronize edin.</p></div>
+        <div class="card"><h3>4. Kısıtı Güçlendir</h3><p>Kapasiteyi artırmak için yatırımı bu noktaya yapın.</p></div>
+        <div class="card"><h3>5. Döngüyü Tekrarla</h3><p>Sürekli iyileştirme ile yeni kısıtları arayın.</p></div>
     </div>
     <footer class="footer">
-        <h3>Profesyonel Çözümler İçin</h3>
-        <a href="mailto:bbudumlu@hotmail.com" class="contact-btn">Bana E-posta Gönder</a>
+        <h3>Doğrudan İletişim</h3>
+        <div class="btn-group">
+            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn">E-posta Gönder</a>
+            <a href="tel:+905427244122" class="contact-btn phone-btn">Hemen Ara</a>
+        </div>
     </footer>
 </body>
 </html>
