--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         .card { background: var(--white); padding: 1.8rem; margin: 1.5rem 0; border-left: 10px solid var(--accent); border-radius: 12px; box-shadow: 0 6px 25px rgba(0,0,0,0.07); }
         .btn-group { margin-top: 20px; }
         .contact-btn { display: inline-block; background: var(--accent); color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; margin: 10px; transition: 0.3s; }
-        .phone-btn { background: #27ae60; } /* Telefon için yeşil buton */
+        .phone-btn { background: #27ae60; }
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 4rem; }
     </style>
 </head>
@@ -33,8 +33,9 @@
         <h3>Doğrudan İletişim</h3>
         <div class="btn-group">
             <a href="mailto:bbudumlu@hotmail.com" class="contact-btn">E-posta Gönder</a>
-            <a href="tel:+905427244122" class="contact-btn phone-btn">Hemen Ara</a>
+            <a href="tel:+905427244122" class="contact-btn phone-btn">📞 05XX XXX XX XX</a>
         </div>
+        <p style="margin-top: 15px; opacity: 0.8;">Hızlı çözüm için arayabilir veya mesaj bırakabilirsiniz.</p>
     </footer>
 </body>
 </html>
