--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>Doğrudan İletişim</h3>
         <div class="btn-group">
             <a href="mailto:bbudumlu@hotmail.com" class="contact-btn">E-posta Gönder</a>
-            <a href="tel:+905427244122" class="contact-btn phone-btn">📞 05XX XXX XX XX</a>
+            <a href="tel:+905427244122" class="contact-btn phone-btn">📞 0542 724 41 22</a>
         </div>
         <p style="margin-top: 15px; opacity: 0.8;">Hızlı çözüm için arayabilir veya mesaj bırakabilirsiniz.</p>
     </footer>
