--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         .hero h1 { font-size: 2.5rem; margin: 0; letter-spacing: 2px; }
         .container { padding: 2rem; max-width: 950px; margin: auto; }
         
-        /* Yeni Vizyon Bölümü */
         .vision-section { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 3rem; border-top: 5px solid var(--primary); }
         .vision-section h2 { color: var(--primary); border-bottom: 2px solid var(--accent); display: inline-block; padding-bottom: 5px; }
         .vision-text { font-style: italic; color: #555; font-size: 1.1rem; border-left: 4px solid var(--accent); padding-left: 20px; margin: 20px 0; }
@@ -54,7 +53,7 @@
         <h3>Stratejik İş Birliği İçin</h3>
         <div class="btn-group">
             <a href="mailto:bbudumlu@hotmail.com" class="contact-btn">E-posta Gönder</a>
-            <a href="tel:+905427244122" class="contact-btn phone-btn">📞 05427244122</a>
+            <a href="tel:+905XXXXXXXXX" class="contact-btn phone-btn">📞 05XX XXX XX XX</a>
         </div>
         <p style="margin-top: 15px; opacity: 0.7;">&copy; 2026 Bahtiyar Ayhan. Tüm Hakları Saklıdır.</p>
     </footer>
