--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h3>Stratejik İş Birliği İçin</h3>
         <div class="btn-group">
             <a href="mailto:bbudumlu@hotmail.com" class="contact-btn">E-posta Gönder</a>
-            <a href="tel:+905XXXXXXXXX" class="contact-btn phone-btn">📞 05XX XXX XX XX</a>
+            <a href="tel:+905427244122" class="contact-btn phone-btn">📞 0542 724 41 22</a>
         </div>
         <p style="margin-top: 15px; opacity: 0.7;">&copy; 2026 Bahtiyar Ayhan. Tüm Hakları Saklıdır.</p>
     </footer>
