--- a/index.html
+++ b/index.html
@@ -6,22 +6,18 @@
     <title>Bahtiyar Ayhan | Stratejik Yönetim & Verimlilik</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; }
-        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; line-height: 1.6; }
-        .hero { background: linear-gradient(rgba(44, 62, 80, 0.9), rgba(44, 62, 80, 0.9)), url('https://images.unsplash.com/photo-1553028675-19bd211583b7?auto=format&fit=crop&w=1200&q=80'); background-size: cover; background-position: center; color: var(--white); padding: 4rem 1rem; text-align: center; }
-        .container { padding: 2rem; max-width: 950px; margin: auto; }
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; }
+        .hero { background: linear-gradient(rgba(44, 62, 80, 0.9), rgba(44, 62, 80, 0.9)), url('https://images.unsplash.com/photo-1553028675-19bd211583b7?auto=format&fit=crop&w=1200&q=80'); background-size: cover; background-position: center; color: var(--white); padding: 3rem 1rem; text-align: center; }
+        .container { padding: 2rem; max-width: 850px; margin: auto; }
+        .vision-section { background: var(--white); padding: 2rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2rem; border-top: 5px solid var(--primary); }
         
-        /* Vizyon Bölümü */
-        .vision-section { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 3rem; border-top: 5px solid var(--primary); }
-        .vision-text { font-style: italic; color: #555; font-size: 1.1rem; border-left: 4px solid var(--accent); padding-left: 20px; margin: 20px 0; }
-        
-        /* Video Oynatıcı Bölümü */
-        .video-container { background: #000; border-radius: 15px; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.2); margin: 2rem 0; position: relative; }
-        video { width: 100%; display: block; max-height: 500px; }
-        .video-title { text-align: center; font-weight: bold; margin-bottom: 1rem; color: var(--primary); }
+        /* Video Alanı */
+        .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); margin-bottom: 2rem; }
+        .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
 
-        .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 4rem; }
-        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-top: 20px; }
-        .contact-btn { display: inline-block; color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; transition: 0.3s; min-width: 200px; text-align: center; }
+        .footer { background: var(--primary); color: var(--white); padding: 2.5rem 1rem; text-align: center; }
+        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-top: 15px; }
+        .contact-btn { display: inline-block; color: white; padding: 12px 20px; text-decoration: none; border-radius: 50px; font-weight: bold; transition: 0.3s; min-width: 180px; }
         .email-btn { background: var(--accent); }
         .phone-btn { background: #27ae60; }
         .whatsapp-btn { background: var(--whatsapp); }
@@ -30,33 +26,28 @@
 <body>
     <header class="hero">
         <h1>BAHTİYAR AYHAN</h1>
-        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik Uzmanı</p>
+        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik</p>
     </header>
 
     <div class="container">
         <section class="vision-section">
             <h2>Vizyon & Yönetim Felsefesi</h2>
-            <p class="vision-text">"Verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."</p>
-            <p>Çok lokasyonlu şirketlerde; Üretim, Planlama, İK ve Satınalma süreçlerinde kültür ve felsefe değişikliği ile sürdürülebilir büyüme sağlıyorum.</p>
+            <p>Çok lokasyonlu şirketlerde verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar.</p>
         </section>
 
-        <h3 class="video-title">🎥 Saha Uygulamaları ve Vaka Analizi</h3>
-        <div class="video-container">
-            <video controls poster="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&w=800&q=80">
-                <source src="VİDEO_LİNKİNİ_BURAYA_YAPISTIR.mp4" type="video/mp4">
-                Tarayıcınız video oynatmayı desteklemiyor.
-            </video>
+        <h3 style="text-align: center;">🎥 Saha Uygulamaları & Analizler</h3>
+        <div class="video-wrapper">
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7428047277119746048" allowfullscreen="" title="Gömülü gönderi"></iframe>
         </div>
     </div>
 
     <footer class="footer">
-        <h3>İş Birliği İçin İletişime Geçin</h3>
+        <h3>Doğrudan İletişim</h3>
         <div class="btn-group">
             <a href="mailto:bbudumlu@hotmail.com" class="contact-btn email-btn">✉️ E-posta Gönder</a>
             <a href="tel:+905427244122" class="contact-btn phone-btn">📞 0542 724 41 22</a>
             <a href="https://wa.me/905427244122" class="contact-btn whatsapp-btn">💬 WhatsApp Mesaj</a>
         </div>
-        <p style="margin-top: 20px; opacity: 0.7;">&copy; 2026 Bahtiyar Ayhan.</p>
     </footer>
 </body>
 </html>
