--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bahtiyar Ayhan | Stratejik Yönetim & Verimlilik</title>
+    <title>Bahtiyar Ayhan | Stratejik Yönetim</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; }
-        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; }
-        .hero { background: linear-gradient(rgba(44, 62, 80, 0.9), rgba(44, 62, 80, 0.9)), url('https://images.unsplash.com/photo-1553028675-19bd211583b7?auto=format&fit=crop&w=1200&q=80'); background-size: cover; padding: 3rem 1rem; text-align: center; color: var(--white); }
+        body { font-family: 'Segoe UI', sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; line-height: 1.6; }
+        .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
         .container { padding: 2rem; max-width: 800px; margin: auto; }
+        .article-box { background: var(--white); padding: 2rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2rem; }
         .video-box { background: #000; border-radius: 15px; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.3); margin: 2rem 0; }
         video { width: 100%; display: block; }
-        .footer { background: var(--primary); color: var(--white); padding: 2.5rem 1rem; text-align: center; }
-        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-top: 15px; }
-        .contact-btn { display: inline-block; color: white; padding: 12px 20px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 180px; }
+        .footer { background: var(--primary); padding: 2.5rem 1rem; text-align: center; }
+        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
+        .contact-btn { display: inline-block; color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 180px; }
         .phone-btn { background: #27ae60; }
         .whatsapp-btn { background: var(--whatsapp); }
+        .email-btn { background: var(--accent); }
     </style>
 </head>
 <body>
@@ -25,6 +27,13 @@
     </header>
 
     <div class="container">
+        <article class="article-box">
+            <h2>Vizyon & Yönetim Felsefesi</h2>
+            <p>Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler ve Satınalma departmanlarında verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar.</p>
+            <p>Görev aldığım şirketlerde, tüm departman süreçlerinin iyileştirilmesi ve operasyonel mükemmellik hedefiyle aktif rol alıyorum. Entegre yönetim sistemleri ile verimliliği artırırken maliyetleri düşürerek şirketin rekabet gücünü ileriye taşıyorum.</p>
+            <p>Haftalık koordinasyon toplantılarıyla güçlendirdiğim iş birliğine dayalı yönetim anlayışım, ekip motivasyonunu ve uyumu artırıyor. Sürekli iyileştirmenin sadece bilgi birikimi değil, bir kültür ve felsefe değişikliği olduğuna inanıyorum.</p>
+        </article>
+
         <h3 style="text-align: center;">🎥 Saha Uygulamaları & Analizler</h3>
         <div class="video-box">
             <video controls>
@@ -36,6 +45,7 @@
 
     <footer class="footer">
         <div class="btn-group">
+            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn email-btn">✉️ E-posta Gönder</a>
             <a href="tel:+905427244122" class="contact-btn phone-btn">📞 0542 724 41 22</a>
             <a href="https://wa.me/905427244122" class="contact-btn whatsapp-btn">💬 WhatsApp Mesaj</a>
         </div>
