--- a/index.html
+++ b/index.html
@@ -3,52 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bahtiyar Ayhan | Stratejik Yönetim</title>
+    <title>Bahtiyar Ayhan | Stratejik Yönetim & Verimlilik</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; }
-        body { font-family: 'Segoe UI', sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; line-height: 1.6; }
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; line-height: 1.6; }
         .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
-        .container { padding: 2rem; max-width: 800px; margin: auto; }
-        .article-box { background: var(--white); padding: 2rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2rem; }
-        .video-box { background: #000; border-radius: 15px; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.3); margin: 2rem 0; }
-        video { width: 100%; display: block; }
-        .footer { background: var(--primary); padding: 2.5rem 1rem; text-align: center; }
-        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
-        .contact-btn { display: inline-block; color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 180px; }
+        .container { padding: 2rem; max-width: 850px; margin: auto; }
+        
+        /* Vizyon & Makale Bölümü */
+        .article-box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2rem; border-top: 5px solid var(--primary); }
+        .article-box h2 { color: var(--primary); margin-top: 0; }
+        
+        /* YouTube Video Alanı */
+        .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); margin: 2rem 0; }
+        .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
+
+        .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
+        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-top: 20px; }
+        .contact-btn { display: inline-block; color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; transition: 0.3s; min-width: 200px; text-align: center; }
+        .email-btn { background: var(--accent); }
         .phone-btn { background: #27ae60; }
         .whatsapp-btn { background: var(--whatsapp); }
-        .email-btn { background: var(--accent); }
     </style>
 </head>
 <body>
     <header class="hero">
         <h1>BAHTİYAR AYHAN</h1>
-        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik</p>
+        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik Uzmanı</p>
     </header>
 
     <div class="container">
-        <article class="article-box">
+        <section class="article-box">
             <h2>Vizyon & Yönetim Felsefesi</h2>
             <p>Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler ve Satınalma departmanlarında verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar.</p>
             <p>Görev aldığım şirketlerde, tüm departman süreçlerinin iyileştirilmesi ve operasyonel mükemmellik hedefiyle aktif rol alıyorum. Entegre yönetim sistemleri ile verimliliği artırırken maliyetleri düşürerek şirketin rekabet gücünü ileriye taşıyorum.</p>
             <p>Haftalık koordinasyon toplantılarıyla güçlendirdiğim iş birliğine dayalı yönetim anlayışım, ekip motivasyonunu ve uyumu artırıyor. Sürekli iyileştirmenin sadece bilgi birikimi değil, bir kültür ve felsefe değişikliği olduğuna inanıyorum.</p>
-        </article>
+        </section>
 
-        <h3 style="text-align: center;">🎥 Saha Uygulamaları & Analizler</h3>
-        <div class="video-box">
-            <video controls>
-                <source src="saha-uygulama.mp4" type="video/mp4">
-                Tarayıcınız video oynatmayı desteklemiyor.
-            </video>
+        <h3 style="text-align: center;">🎥 Saha Uygulamaları & Vaka Analizi</h3>
+        <div class="video-wrapper">
+            <iframe src="https://www.youtube.com/embed/L2gJFetTgEE" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 
     <footer class="footer">
+        <h3>İş Birliği İçin İletişime Geçin</h3>
         <div class="btn-group">
             <a href="mailto:bbudumlu@hotmail.com" class="contact-btn email-btn">✉️ E-posta Gönder</a>
             <a href="tel:+905427244122" class="contact-btn phone-btn">📞 0542 724 41 22</a>
             <a href="https://wa.me/905427244122" class="contact-btn whatsapp-btn">💬 WhatsApp Mesaj</a>
         </div>
+        <p style="margin-top: 25px; opacity: 0.7; font-size: 0.9rem;">&copy; 2026 Bahtiyar Ayhan. Tüm Hakları Saklıdır.</p>
     </footer>
 </body>
 </html>
