--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
             <iframe src="https://www.youtube.com/embed/L2gJFetTgEE" allowfullscreen></iframe>
         </div>
 
-        <h3 style="text-align: center; margin-top: 40px;">📜 Yetkinlikler & Sertifikalar</h3>
-        <div class="cert-grid">
-            <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma: Green Belt</p></div>
-            <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain Management</p></div>
-            <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction Tips</p></div>
-            <div class="cert-card"><img src="sertifika4.png"><p>Operational Excellence</p></div>
-        </div>
+<h3 style="text-align: center; margin-top: 40px;">📜 Uzmanlık & Başarı Sertifikaları</h3>
+<div class="cert-grid">
+    <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma: Green Belt</p></div>
+    <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain & Operations</p></div>
+    <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction Expert</p></div>
+    <div class="cert-card"><img src="sertifika4.png"><p>Operational Excellence</p></div>
+    <div class="cert-card"><img src="sertifika5.png"><p>Proje Yönetimi Esasları</p></div>
+    <div class="cert-card"><img src="sertifika6.png"><p>Uluslararası Projeler</p></div>
+    <div class="cert-card"><img src="sertifika7.png"><p>Understanding Business</p></div>
+</div>
     </div>
 
     <footer class="footer">
