--- a/index.html
+++ b/index.html
@@ -6,26 +6,30 @@
     <title>Bahtiyar Ayhan | Stratejik Yönetim & Verimlilik</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; }
-        body { font-family: 'Segoe UI', sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; line-height: 1.6; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; line-height: 1.6; }
         .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
-        .container { padding: 2rem; max-width: 900px; margin: auto; }
-        .article-box { background: var(--white); padding: 2rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2rem; border-top: 5px solid var(--primary); }
-        .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); margin-bottom: 3rem; }
+        .container { padding: 2rem; max-width: 950px; margin: auto; }
+        .article-box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--primary); }
+        .article-box h2 { color: var(--primary); margin-top: 0; border-bottom: 2px solid #eee; padding-bottom: 10px; }
+        .article-box p { margin-bottom: 1.2rem; font-size: 1.1rem; text-align: justify; }
+        .quote { font-style: italic; color: var(--accent); font-weight: bold; border-left: 4px solid var(--accent); padding-left: 15px; }
+        
+        .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); margin: 2rem 0; }
         .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
         
-        /* Sertifika Galerisi */
-        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 2rem; }
-        .cert-card { background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); text-align: center; transition: 0.3s; }
-        .cert-card:hover { transform: translateY(-5px); }
-        .cert-card img { width: 100%; border-radius: 5px; cursor: pointer; }
-        .cert-card p { font-size: 0.85rem; font-weight: bold; margin-top: 10px; color: var(--primary); }
+        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; margin-top: 2rem; }
+        .cert-card { background: white; padding: 12px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); text-align: center; transition: 0.3s; }
+        .cert-card:hover { transform: translateY(-5px); box-shadow: 0 6px 15px rgba(0,0,0,0.15); }
+        .cert-card img { width: 100%; border-radius: 5px; border: 1px solid #eee; }
+        .cert-card p { font-size: 0.9rem; font-weight: bold; margin-top: 10px; color: var(--primary); }
 
-        .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
-        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-top: 20px; }
-        .contact-btn { display: inline-block; color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 180px; }
+        .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
+        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 25px; }
+        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 200px; transition: 0.3s; }
         .email-btn { background: var(--accent); }
         .phone-btn { background: #27ae60; }
         .whatsapp-btn { background: var(--whatsapp); }
+        .contact-btn:hover { opacity: 0.9; transform: scale(1.05); }
     </style>
 </head>
 <body>
@@ -37,33 +41,45 @@
     <div class="container">
         <section class="article-box">
             <h2>Vizyon & Yönetim Felsefesi</h2>
-            <p>Fabrika Yönetimlerinde çok lokasyonlu şirketlerde verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar. Entegre yönetim sistemleri ile maliyetleri düşürerek rekabet gücünü artırıyorum.</p>
+            <p class="quote">
+                "Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler, Satınalma departmanlarında verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."
+            </p>
+            <p>
+                Görev aldığım şirketlerde, tüm departman süreçlerinin iyileştirilmesi ve operasyonel mükemmellik hedefiyle aktif rol alıyorum. Tüm departmanların entegre Yönetim sistemi ile verimliliği artırırken maliyetleri düşürerek şirketin rekabet gücünü ileriye taşıdım.
+            </p>
+            <p>
+                Haftalık koordinasyon toplantılarıyla güçlendirdiğim, iş birliğine dayalı yönetim anlayışım, ekip motivasyonunu ve uyumu artırıyor. Yönetim ve idari kadrolarla kurduğum yakın iş birliği sayesinde, yenilikçi ve uygulanabilir çözümlerle sürekli iyileştirmeye odaklanıyorum.
+            </p>
+            <p>
+                Stratejik planlama, problem çözme ve takım ruhunu harmanlayan yaklaşımım; şirketlerin sürdürülebilir büyümesine ve sektörde lider konuma ulaşmasına katkı sağlamaya devam ediyor ve bunun sadece bilgi birikimi değil, kültür ve felsefe değişikliğinin de önemli olduğuna inanıyorum.
+            </p>
         </section>
 
-        <h3 style="text-align: center;">🎥 Saha Uygulamaları & Vaka Analizi</h3>
+        <h3 style="text-align: center; color: var(--primary);">🎥 Saha Uygulamaları & Vaka Analizi</h3>
         <div class="video-wrapper">
             <iframe src="https://www.youtube.com/embed/L2gJFetTgEE" allowfullscreen></iframe>
         </div>
 
-<h3 style="text-align: center; margin-top: 40px;">📜 Uzmanlık & Başarı Sertifikaları</h3>
-<div class="cert-grid">
-    <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma: Green Belt</p></div>
-    <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain & Operations</p></div>
-    <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction Expert</p></div>
-    <div class="cert-card"><img src="sertifika4.png"><p>Operational Excellence</p></div>
-    <div class="cert-card"><img src="sertifika5.png"><p>Proje Yönetimi Esasları</p></div>
-    <div class="cert-card"><img src="sertifika6.png"><p>Uluslararası Projeler</p></div>
-    <div class="cert-card"><img src="sertifika7.png"><p>Understanding Business</p></div>
-</div>
+        <h3 style="text-align: center; color: var(--primary); margin-top: 50px;">📜 Uzmanlık & Başarı Sertifikaları</h3>
+        <div class="cert-grid">
+            <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma: Green Belt</p></div>
+            <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain & Operations</p></div>
+            <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction Expert</p></div>
+            <div class="cert-card"><img src="sertifika4.png"><p>Operational Excellence</p></div>
+            <div class="cert-card"><img src="sertifika5.png"><p>Proje Yönetimi Esasları</p></div>
+            <div class="cert-card"><img src="sertifika6.png"><p>Uluslararası Projeler</p></div>
+            <div class="cert-card"><img src="sertifika7.png"><p>Understanding Business</p></div>
+        </div>
     </div>
 
     <footer class="footer">
-        <h3>İletişime Geçin</h3>
+        <h3>Profesyonel İletişim</h3>
         <div class="btn-group">
             <a href="mailto:bbudumlu@hotmail.com" class="contact-btn email-btn">✉️ E-posta Gönder</a>
             <a href="tel:+905427244122" class="contact-btn phone-btn">📞 0542 724 41 22</a>
             <a href="https://wa.me/905427244122" class="contact-btn whatsapp-btn">💬 WhatsApp Mesaj</a>
         </div>
+        <p style="margin-top: 40px; font-size: 0.8rem; opacity: 0.7;">© 2026 Bahtiyar Ayhan - Tüm Hakları Saklıdır.</p>
     </footer>
 </body>
 </html>
