--- a/index.html
+++ b/index.html
@@ -47,4 +47,43 @@
 
 Tüm departmanların entegre Yönetim sistemi ile  verimliliği artırırken maliyetleri düşürerek şirketin rekabet gücünü ileriye taşıdım.
 
-Haftalık koordinasyon toplantılarıyla güçlendirdiğim, iş birliğine dayalı yönetim anlayışım, ekip
+Haftalık koordinasyon toplantılarıyla güçlendirdiğim, iş birliğine dayalı yönetim anlayışım, ekip motivasyonunu ve uyumu artırıyor.  
+Yönetim ve idari kadrolarla kurduğum yakın iş birliği sayesinde, yenilikçi ve uygulanabilir çözümlerle sürekli iyileştirmeye odaklanıyorum.
+
+Stratejik planlama, problem çözme ve takım ruhunu harmanlayan yaklaşımım;  
+şirketlerin sürdürülebilir büyümesine ve sektörde lider konuma ulaşmasına katkı sağlamaya devam ediyor ve bunun sadece bilgi birikim degil , kültür ve felsefe değişikliğinin de önemli olduğuna inanıyorum.</p>
+
+            <div class="award-section">
+                <h3 style="color: #d4af37; margin-top: 0;">🏆 Öne Çıkan Başarı: Ulusal Uygulama Ödülü</h3>
+                <img src="Ödül.png" alt="Bahtiyar Ayhan Başarı Ödülü" class="award-img">
+                <p style="text-align: center; font-size: 0.9rem; margin-top: 10px;"><strong>34. Ulusal Yöneylem Araştırması Kongresi - Kişisel Uygulama Ödülü</strong></p>
+            </div>
+        </section>
+
+        <h3 style="text-align: center;">🎥 Saha Uygulamaları & Vaka Analizi</h3>
+        <div class="video-wrapper">
+            <iframe src="https://www.youtube.com/embed/L2gJFetTgEE" allowfullscreen></iframe>
+        </div>
+
+        <h3 style="text-align: center; margin-top: 50px;">📜 Uzmanlık & Başarı Sertifikaları</h3>
+        <div class="cert-grid">
+            <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma: Green Belt</p></div>
+            <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain & Operations</p></div>
+            <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction Expert</p></div>
+            <div class="cert-card"><img src="sertifika4.png"><p>Operational Excellence</p></div>
+            <div class="cert-card"><img src="sertifika5.png"><p>Proje Yönetimi Esasları</p></div>
+            <div class="cert-card"><img src="sertifika6.png"><p>Uluslararası Projeler</p></div>
+            <div class="cert-card"><img src="sertifika7.png"><p>Understanding Business</p></div>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <h3>Profesyonel İletişim</h3>
+        <div class="btn-group">
+            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn email-btn">✉️ E-posta Gönder</a>
+            <a href="https://wa.me/905427244122" class="contact-btn whatsapp-btn">💬 WhatsApp Mesaj</a>
+        </div>
+        <p style="margin-top: 40px; font-size: 0.8rem; opacity: 0.7;">© 2026 Bahtiyar Ayhan - Tüm Hakları Saklıdır.</p>
+    </footer>
+</body>
+</html>
