--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
         .container { padding: 2rem; max-width: 950px; margin: auto; }
         .article-box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--primary); }
-        .article-box h2 { color: var(--primary); margin-top: 0; border-bottom: 2px solid #eee; padding-bottom: 10px; }
         .article-box p { margin-bottom: 1.2rem; font-size: 1.1rem; text-align: justify; white-space: pre-line; }
         .quote { font-style: italic; color: var(--accent); font-weight: bold; border-left: 4px solid var(--accent); padding-left: 15px; margin-bottom: 20px; }
         .award-section { background: #fffdf2; border: 2px solid #f1c40f; padding: 20px; border-radius: 15px; text-align: center; margin: 25px 0; }
@@ -21,12 +20,12 @@
         .cert-card { background: white; padding: 12px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); text-align: center; }
         .cert-card img { width: 100%; border-radius: 5px; }
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
-        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 25px; }
+        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 25px 0; }
         .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; transition: 0.3s; }
         .whatsapp-btn { background: var(--whatsapp); }
         .email-btn { background: var(--accent); }
         .phone-btn { background: #2980b9; }
-        .contact-btn:hover { transform: scale(1.05); opacity: 0.9; }
+        .visitor-counter { background: rgba(255,255,255,0.1); padding: 10px 20px; border-radius: 10px; display: inline-block; margin-top: 20px; font-size: 0.9rem; }
     </style>
 </head>
 <body>
@@ -74,6 +73,11 @@ Stratejik planlama, problem çözme ve takım ruhunu harmanlayan yaklaşımım; 
             <a href="https://wa.me/905427244122" class="contact-btn whatsapp-btn">💬 WhatsApp</a>
             <a href="mailto:bbudumlu@hotmail.com" class="contact-btn email-btn">✉️ E-posta</a>
         </div>
+        
+        <div class="visitor-counter">
+            📊 Toplam Ziyaret: <img src="https://profile-counter.glitch.me/BahtiyarAyhan/count.svg" alt="sayac" style="vertical-align: middle;">
+        </div>
+
         <p style="margin-top: 30px; font-size: 0.8rem; opacity: 0.7;">© 2026 Bahtiyar Ayhan - Tüm Hakları Saklıdır.</p>
     </footer>
 </body>
