--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bahtiyar Ayhan | Stratejik Yönetim & Danışmanlık</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; --gold: #d4af37; }
-        body { font-family: 'Segoe UI', sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
         .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
         .container { padding: 2rem; max-width: 950px; margin: auto; }
         .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 40px; border-radius: 20px; text-align: center; margin: 40px 0; border: 3px solid var(--gold); }
@@ -20,12 +20,15 @@
         .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px; margin-top: 2rem; }
         .cert-card { background: white; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
         .cert-card img { width: 100%; border-radius: 5px; }
+        
+        /* İLETİŞİM BÖLGESİ STİLLERİ */
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
         .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 25px 0; }
-        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 150px; }
+        .contact-btn { display: flex; align-items: center; justify-content: center; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 160px; transition: 0.3s; }
         .whatsapp-btn { background: var(--whatsapp); }
         .email-btn { background: var(--accent); }
         .phone-btn { background: #2980b9; }
+        .contact-btn:hover { transform: scale(1.05); filter: brightness(1.1); }
     </style>
 </head>
 <body>
@@ -37,7 +40,7 @@
     <div class="container">
         <section class="article-box">
             <h2>Yönetim Felsefesi</h2>
-            <p>Çok lokasyonlu şirketlerde verimliliği artırırken maliyetleri düşüren, entegre yönetim sistemleri kuruyorum.</p>
+            <p>Çok lokasyonlu şirketlerde verimliliği artırırken maliyetleri düşüren sürdürülebilir yönetim sistemleri kuruyorum.</p>
         </section>
 
         <div class="cta-section">
@@ -46,32 +49,9 @@
             <a href="https://wa.me/905427244122" class="cta-main-btn">ŞİMDİ RANDEVU AL</a>
         </div>
 
-        <div class="grid">
-            <div class="card success-card"><h3>%75 Fire Azaltma</h3><p>Süreç optimizasyonu ile kârlılık artışı.</p></div>
-            <div class="card success-card"><h3>%25 Kapasite</h3><p>Ek yatırım yapmadan verimlilik artışı.</p></div>
-        </div>
-
-        <div style="text-align:center; margin: 2rem 0;">
-            <h3>🏆 Ulusal Uygulama Ödülü</h3>
-            <img src="Ödül.png" style="max-width:100%; border-radius:10px; border: 2px solid var(--gold);">
-        </div>
-
-        <div class="video-wrapper">
-            <iframe src="https://www.youtube.com/embed/L2gJFetTgEE" allowfullscreen></iframe>
-        </div>
-
-        <h3 style="text-align: center;">📜 Uzmanlık Sertifikaları</h3>
+        <h3 style="text-align: center;">📜 Sertifikalar</h3>
         <div class="cert-grid">
             <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma</p></div>
             <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain</p></div>
             <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction</p></div>
-            <div class="cert-card"><img src="sertifika4.png"><p>OpEx</p></div>
-            <div class="cert-card"><img src="sertifika5.png"><p>Proje</p></div>
-            <div class="cert-card"><img src="sertifika6.png"><p>Global</p></div>
-            <div class="cert-card"><img src="sertifika7.png"><p>Business</p></div>
-        </div>
-    </div>
-
-    <footer class="footer">
-        <h3>Hemen İletişime Geçin</h3>
-        <div class="btn-
+            <div class
