--- a/index.html
+++ b/index.html
@@ -3,79 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bahtiyar Ayhan | Stratejik Yönetim & Danışmanlık</title>
+    <title>Bahtiyar Ayhan | Stratejik Yönetim</title>
     <style>
-        :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; --gold: #d4af37; }
-        body { font-family: 'Segoe UI', sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
-        .hero { background: var(--primary); color: var(--white); padding: 2rem 1rem; text-align: center; }
-        .container { padding: 1.5rem; max-width: 900px; margin: auto; }
-        
-        /* DARBOĞAZ KUTUSU */
-        .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 30px; border-radius: 15px; text-align: center; margin: 25px 0; border: 3px solid var(--gold); }
-        .cta-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 15px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; margin-top: 15px; }
-
-        .box { background: var(--white); padding: 20px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); margin-bottom: 20px; }
-        
-        /* BAŞARI RAKAMLARI */
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; margin: 20px 0; }
-        .card { background: #f9fffb; border-bottom: 4px solid #27ae60; padding: 20px; border-radius: 12px; text-align: center; }
-
-        /* ÖDÜL BÖLGESİ */
-        .award-box { background: #fffdf2; border: 1px solid var(--gold); padding: 20px; border-radius: 15px; text-align: center; margin: 25px 0; }
-        .award-box img { max-width: 100%; height: auto; border-radius: 10px; margin-top: 10px; }
-
-        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 10px; margin-top: 20px; }
-        .cert-card { background: white; padding: 8px; border-radius: 8px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        .cert-card img { width: 100%; border-radius: 4px; }
-
-        .footer { background: var(--primary); color: var(--white); padding: 2.5rem 1rem; text-align: center; }
-        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin: 20px 0; }
-        .contact-btn { display: inline-block; color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 0.9rem; }
+        :root { --p:#2c3e50; --a:#e67e22; --w:#fff; --g:#d4af37; --wa:#25D366; }
+        body { font-family: sans-serif; background:#f4f7f6; color:var(--p); margin:0; padding:0; }
+        .c { padding:1.5rem; max-width:900px; margin:auto; }
+        .box { background:var(--w); padding:20px; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.1); margin-bottom:20px; }
+        .cta { background:linear-gradient(135deg,#2c3e50,#1a252f); color:white; padding:30px; border-radius:15px; text-align:center; border:3px solid var(--g); margin:20px 0; }
+        .btn-m { display:inline-block; background:var(--g); color:var(--p); padding:15px 30px; text-decoration:none; border-radius:50px; font-weight:bold; margin-top:15px; }
+        .grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:15px; margin:20px 0; }
+        .card { background:#f9fffb; border-bottom:4px solid #27ae60; padding:20px; border-radius:12px; text-align:center; }
+        .award { background:#fffdf2; border:1px solid var(--g); padding:20px; border-radius:15px; text-align:center; margin:20px 0; }
+        .cert-g { display:grid; grid-template-columns:repeat(auto-fit,minmax(120px,1fr)); gap:10px; margin-top:20px; }
+        .cert-card { background:white; padding:8px; border-radius:8px; text-align:center; box-shadow:0 2px 5px rgba(0,0,0,0.1); font-size:12px; }
+        .footer { background:var(--p); color:var(--w); padding:2rem 1rem; text-align:center; }
+        .btn { color:white; padding:12px 20px; text-decoration:none; border-radius:50px; font-weight:bold; display:inline-block; margin:5px; }
     </style>
 </head>
 <body>
-    <header class="hero">
+    <header style="background:var(--p); color:white; padding:2rem; text-align:center;">
         <h1>BAHTİYAR AYHAN</h1>
-        <p>Stratejik Üretim Yönetimi Uzmanı</p>
+        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik</p>
     </header>
-
-    <div class="container">
+    <div class="c">
         <div class="box">
             <h2>Yönetim Felsefesi</h2>
-            <p>Çok lokasyonlu şirketlerde verimliliği artırırken maliyetleri düşüren sürdürülebilir yönetim sistemleri kuruyorum.</p>
+            <p>Çok lokasyonlu şirketlerde verimlilik ve maliyet odaklı sürdürülebilir sistemler kuruyorum.</p>
         </div>
-
-        <div class="cta-section">
+        <div class="cta">
             <h2>HIZLI TEŞHİS & ÇÖZÜM</h2>
             <p><strong>"Fabrikanızdaki darboğazı 48 saat içinde teşhis edelim. İlk görüşme ücretsizdir."</strong></p>
-            <a href="https://wa.me/905427244122" class="cta-btn">ŞİMDİ RANDEVU AL</a>
+            <a href="https://wa.me/905427244122" class="btn-m">RANDEVU AL</a>
         </div>
-
-        <h2 style="text-align: center;">📈 Somut Başarılar</h2>
         <div class="grid">
-            <div class="card"><h3>🔥 %75 Fire Azaltma</h3><p>Üretim hattında fireyi %8'den %2'ye indirerek kârlılık sağladık.</p></div>
-            <div class="card"><h3>⚡ %25 Kapasite Artışı</h3><p>Yatırımsız süreç optimizasyonu ile üretim hacmini artırdık.</p></div>
+            <div class="card"><h3>🔥 %75 Fire Azaltma</h3><p>Süreç optimizasyonu ile kârlılık sağladık.</p></div>
+            <div class="card"><h3>⚡ %25 Kapasite Artışı</h3><p>Ek yatırımsız verimlilik artışı sağladık.</p></div>
         </div>
-
-        <div class="award-box">
-            <h3 style="color:var(--gold)">🏆 Ulusal Uygulama Ödülü</h3>
-            <img src="Ödül.png" alt="Bahtiyar Ayhan Ödül">
+        <div class="award">
+            <h3 style="color:var(--g)">🏆 Ulusal Uygulama Ödülü</h3>
+            <img src="Ödül.png" style="max-width:100%; border-radius:10px; margin-top:10px;">
         </div>
-
-        <h3 style="text-align: center;">📜 Sertifikalar</h3>
-        <div class="cert-grid">
-            <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma</p></div>
-            <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain</p></div>
-            <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction</p></div>
-            <div class="cert-card"><img src="sertifika4.png"><p>OpEx</p></div>
-            <div class="cert-card"><img src="sertifika5.png"><p>Proje</p></div>
-            <div class="cert-card"><img src="sertifika6.png"><p>Global</p></div>
-            <div class="cert-card"><img src="sertifika7.png"><p>Business</p></div>
+        <h3 style="text-align:center">📜 Sertifikalar</h3>
+        <div class="cert-g">
+            <div class="cert-card"><img src="sertifika1.png" width="100%"><p>Six Sigma</p></div>
+            <div class="cert-card"><img src="sertifika2.png" width="100%"><p>Supply Chain</p></div>
+            <div class="cert-card"><img src="sertifika3.png" width="100%"><p>Cost Reduction</p></div>
+            <div class="cert-card"><img src="sertifika4.png" width="100%"><p>OpEx</p></div>
+            <div class="cert-card"><img src="sertifika5.png" width="100%"><p>Proje</p></div>
+            <div class="cert-card"><img src="sertifika6.png" width="100%"><p>Global</p></div>
+            <div class="cert-card"><img src="sertifika7.png" width="100%"><p>Business</p></div>
         </div>
     </div>
-
     <footer class="footer">
-        <div class="btn-group">
-            <a href="tel:+905427244122" class="contact-btn" style="background:#2980b9">📞 Ara</a>
-            <a href="https://wa.me/905427244122" class="contact-btn" style="background:var(--whatsapp)">💬 WhatsApp</a>
-            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn" style="background
+        <div style="margin-bottom:20px;">
+            <a href="tel:+905427244122" class="btn" style="background:#2980b9">📞 Ara</a>
+            <a href="https://wa.me/905427244122" class="btn" style="background:var(--wa)">💬 WhatsApp</a>
+            <a href="mailto:bbudumlu@hotmail.com" class="btn" style="background:var(--a)">✉️ E-posta</a>
+        </div>
+        <p>📊 Toplam Ziyaret: <img src="https://komarev.com/ghpvc/?username=BahtiyarAyhan&color=orange&style=flat-square&label=GIRIŞ" style="vertical-align:middle;"></p>
+    </footer>
+</body>
+</html>
