--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
         .container { padding: 2rem; max-width: 950px; margin: auto; }
         
-        /* FELSEFE BÖLÜMÜ (TAM METİN) */
+        /* YÖNETİM FELSEFESİ (TAM METİN) */
         .box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--accent); }
         .quote { font-style: italic; color: var(--accent); font-weight: bold; border-left: 5px solid var(--accent); padding-left: 15px; margin-bottom: 20px; font-size: 1.2rem; }
         .felsefe-text p { margin-bottom: 15px; text-align: justify; }
 
-        /* FORM TASARIMI */
+        /* TEŞHİS FORMU */
         .form-box { background: #fff; padding: 25px; border-radius: 15px; border: 2px solid #2980b9; margin: 30px 0; }
         .form-box h3 { color: #2980b9; margin-top: 0; text-align: center; }
         .form-group { margin-bottom: 15px; }
@@ -59,18 +59,4 @@
                 <label>Gözlemlenen Sorun</label>
                 <select id="sorun">
                     <option value="Stok ve Yığılma">Makine Aralarında Yığılma / Stok</option>
-                    <option value="Operatör Beklemesi">Operatörlerin Beklemesi</option>
-                    <option value="Aşırı Fire">Yüksek Oranda Fire / Çöp</option>
-                    <option value="Düzensizlik">Saha Düzensizliği (5S Eksikliği)</option>
-                    <option value="Diğer">Diğer Teknik Kısıtlar</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label>Fabrika/Şirket Adı</label>
-                <input type="text" id="fabrika" placeholder="İsim belirtmek zorunda değilsiniz">
-            </div>
-            <div class="form-group">
-                <label>Kısa Not</label>
-                <textarea id="notlar" rows="3"></textarea>
-            </div>
-            <button class="submit-btn" onclick="send
+                    <option value="Operatör Beklemesi">Operatörlerin Beklemesi
