Update greeting in sendToBahtiyar function

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             const sorun = document.getElementById('sorun').value;
             const fabrika = document.getElementById('fabrika').value;
             const notlar = document.getElementById('notlar').value;
-            const text = `Merhaba Bahtiyar Usta, Sahadan Bildiriyorum:%0A%0A*Sorun:* ${sorun}%0A*Fabrika:* ${fabrika}%0A*Notlar:* ${notlar}`;
+            const text = `Merhaba Bahtiyar bey, Sahadan Bildiriyorum:%0A%0A*Sorun:* ${sorun}%0A*Fabrika:* ${fabrika}%0A*Notlar:* ${notlar}`;
             window.location.href = `https://wa.me/905427244122?text=${text}`;
         }
     </script>
